Paging for catalog view
Paging for catalog view

--- a/ELibrary_Team 1/Areas/Unauthenticated/Views/Home/Index.cshtml
+++ b/ELibrary_Team 1/Areas/Unauthenticated/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ELibrary_Team_1.Models.Document>
+﻿@model ELibrary_Team_1.ViewModels.PagingReuslt<ELibrary_Team_1.Models.Document>
 
 @{
     ViewData["Title"] = "Index";
