--- a/ELibrary_Team 1/Views/Shared/_Layout.cshtml
+++ b/ELibrary_Team 1/Views/Shared/_Layout.cshtml
@@ -1,6 +1,8 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ELibrary_Team_1</title>
@@ -11,6 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 </head>
 <body>
+    @using Microsoft.AspNetCore.Identity
+    @using ELibrary_Team_1.Models
+
+    @inject SignInManager<AppUser> SignInManager
+    @inject UserManager<AppUser> UserManager
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -26,14 +33,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Document" asp-action="Index">Document</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Chapter" asp-action="Index">Chapter</a>
-                        </li>*@
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Document" asp-action="Index">Document</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Chapter" asp-action="Index">Chapter</a>
+                            </li>*@
+                        @if (User.IsInRole("Admin"))
+                        {
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -43,11 +52,13 @@
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Document" asp-action="Index">Document</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Chapter" asp-action="Index">Chapter</a>
-                                <a class="dropdown-item" asp-page="/Role/Index" asp-area="Admin" >Role</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="AccessRequest" asp-action="Index">Access Request</a>
+                                <a class="dropdown-item" asp-page="/Role/Index" asp-area="Admin">Role</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </div>
                         </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -73,6 +84,6 @@
     <script src="https://kit.fontawesome.com/e19c476714.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
-    
+
 </body>
 </html>
