--- a/ELibrary/Areas/Admin/Views/Document/AddOrEdit.cshtml
+++ b/ELibrary/Areas/Admin/Views/Document/AddOrEdit.cshtml
@@ -15,8 +15,8 @@
             {
                 <div class="form-group">
                     <label>Image</label>
-                    <a href="@("Images/" + Model.Document.Image)">
-                        <img src="@("~/Images/" + Model.Document.Image)" asp-append-version="true" width="50" height="50" />
+                    <a href="@("images/" + Model.Document.Image)">
+                        <img src="@("~/images/" + Model.Document.Image)" asp-append-version="true" width="50" height="50" />
                     </a>
                     <input type="hidden" asp-for="Document.Image" />
                 </div>
