--- a/ELibrary/Areas/Admin/Views/Document/Details.cshtml
+++ b/ELibrary/Areas/Admin/Views/Document/Details.cshtml
@@ -8,8 +8,8 @@
     <h4>Document</h4>
     <hr />
 
-    <a href="@("Images/"+Model.Document.Image)">
-        <img src="@("~/Images/"+Model.Document.Image)" asp-append-version="true" width="100" height="100" />
+    <a href="@("images/"+Model.Document.Image)">
+        <img src="@("~/images/"+Model.Document.Image)" asp-append-version="true" width="100" height="100" />
     </a>
     <dl class="row">
         <dt class="col-sm-3">
