--- a/ELibrary/Areas/Admin/Views/Document/_ViewAll.cshtml
+++ b/ELibrary/Areas/Admin/Views/Document/_ViewAll.cshtml
@@ -36,8 +36,8 @@
         {
         <tr>
             <td>
-                <a href="@("Images/"+item.Image)">
-                    <img src="@("~/Images/"+item.Image)" asp-append-version="true" width="50" height="50" />
+                <a href="@("images/"+item.Image)">
+                    <img src="@("~/images/"+item.Image)" asp-append-version="true" width="50" height="50" />
                 </a>
                 
             </td>
