--- a/ELibrary/Areas/Unauthenticated/Views/Home/_ViewCatalog.cshtml
+++ b/ELibrary/Areas/Unauthenticated/Views/Home/_ViewCatalog.cshtml
@@ -57,7 +57,7 @@
             {
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" src="@("~/Images/"+@item.Image)" asp-append-version="true" alt="@item.Description">
+                        <img class="card-img-top" src="@("~/images/"+@item.Image)" asp-append-version="true" alt="@item.Description">
                         <div class="card-body">
                             <h4>@item.Title</h4>
                             <h6>Author: @item.Author</h6>
