--- a/ELibrary/Views/Shared/_Layout.cshtml
+++ b/ELibrary/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Document" asp-action="Index">Document</a>
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Chapter" asp-action="Index">Chapter</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AccessRequest" asp-action="Index">Chapter</a>
                                     <a class="dropdown-item" asp-page="/Role/Index" asp-area="Admin">Role</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#">Something else here</a>
